[package]
name = "tabs"
version = "0.1.0"
authors = ["Kaiden42 <gitlab@tinysn.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced_aw = { git = "https://github.com/iced-rs/iced_aw.git", branch = "main", features = ["tabs"] }
iced = { features = [ "image"] }
